--- a/blogpost.html
+++ b/blogpost.html
@@ -12,6 +12,10 @@
             <p>y este es el parrafo donde vamos a 
              explicar las cosas increibles que se 
              pueden hacer con ramas</p>
+            <p> Los blogs son la mejore forma 
+              de compartir información y tus ideas 
+             Mucho mas que ir a conferencias o salir 
+             en Youtube</p>
         </div>
     </div>
 </body>
