--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog. <span ig="tagline">Tu blog fav</span>
+            Hyperblog. <span ig="tagline">mi blog de cabecera</span>
         </div>
         <div id="post">
          <h1>Este es el titulo 
