Agregue suscripcion, cambie la cabecera maestra y fuente azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog. <span ig="tagline">Tu blog fav</span>
+            Hyperblog. <span ig="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
          <h1>Este es el titulo 
@@ -19,6 +19,8 @@
               de compartir información y tus ideas 
              Mucho mas que ir a conferencias o salir 
              en Youtube</p>
+             <p> Suscribete y dale like</p>
+             
         </div>
     </div>
 </body>
