--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,9 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Hyperblog. <span ig="tagline">Tu blog maestro</span>
+            <img id="logo" src="imagenes/halloween.png" />
+            Hyperblog. 
+            <span ig="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
          <h1>Este es el titulo 
