--- a/blogpost.html
+++ b/blogpost.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    
     <title>Bienvenido al Hyperblog 2.0</title>
     <link rel="stylesheet" href="css/estilo.css" />
 </head>
@@ -20,7 +21,9 @@
              Mucho mas que ir a conferencias o salir 
              en Youtube</p>
              <p> Suscribete y dale like</p>
-             
+             <div id="footer">
+                 Hechor con amor en platzi
+             </div>
         </div>
     </div>
 </body>
