--- a/blogpost.html
+++ b/blogpost.html
@@ -14,8 +14,8 @@
          <h1>Este es el título 
          atractivo e interesante 
          del post</h1>
-            <p>y este es el párrafo donde vamos a 
-             explicar las cosas increibles que se 
+            <p>y este es el p&aacute;rrafo donde vamos a 
+             explicar las cosas incre&iacute;bles que se 
              pueden hacer con ramas</p>
             <p> Los blogs son la mejore forma 
               de compartir información y tus ideas 
