--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
             <p>y este es el parrafo donde vamos a 
              explicar las cosas increibles que se 
              pueden hacer con ramas</p>
+             <p><img src="imagenes/amor.jpg" width="100%"/></p>
             <p> Los blogs son la mejore forma 
               de compartir información y tus ideas 
              Mucho mas que ir a conferencias o salir 
